@@ -1,7 +1,7 @@
 Things todo:
 
 Release 1.1:
-1. Save file dialog when closing the application with the closebutton.
+1. [done] Save file dialog when closing the application with the closebutton.
 2. Use the filenode structure as preparation for directory diff.
 3. Change Revision when editing instead of creating a New revision 
    every time. [PERFORMANCE]
